--- a/less/theme/_add-listing.less
+++ b/less/theme/_add-listing.less
@@ -593,9 +593,13 @@
     		padding-right: 0;
 		}
 		.fnb-select{
-    		font-size: 1em;
+    		font-size: 0.8em;
     		opacity: 0.7;
+    		width: 80%;
 		}
+	}
+	.no-padding{
+		padding: 0;
 	}
 }
 
